src/styles/custom.css
@font-face {
  font-family: 'DOS/V re. ANK30';
  src: url(../assets/fonts/Web437_DOS-V_re_ANK24.woff) format('woff');
}

@font-face {
  font-family: 'IBM Model3x Alt4';
  src: url(../assets/fonts/Web437_IBM_Model3x_Alt4.woff) format('woff');
}

.project-anchor {
  display: block;
  text-decoration: none !important;
}

.project-panel {
  margin: calc(var(--spacing) * 6.5);

  background-color: var(--theme-accent);
  display: grid;
  grid-template-columns: 60% 1fr;

  border-width: calc(var(--spacing) * 0.5);
  column-gap: calc(var(--spacing) * 0.5);

  p {
    margin: 0 !important;
    color: var(--theme-foreground) !important;
    font-family: 'IBM Model3x Alt4';
  }

  span {
    background-color: var(--theme-background);
    display: inline-block;
    padding: 26px;
  }

  span.project-preview {
    box-sizing: border-box;
    height: 100%;

    p {
      display: inline;
      line-height: 1;

      padding: 6px;
      background: color-mix(in srgb, var(--theme-background), transparent 30%);
      max-width: fit-content;

      opacity: 0;
    }
  }

  span.project-preview:hover p {
    position: relative;
    opacity: 100%;
    transition: all 0.25s ease-in-out;
    z-index: 1;
  }
}

